# libmusicbrainz

./: .gitignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.cmake  Doxyfile.in  FILES  INSTALL  INSTALL.txt  Makefile-adh  Makefile.am  NEWS  NEWS.txt  README  README.md  README.txt  SConstruct  TODO  acconfig.h  acinclude.m4  autogen.sh  config.h.cmake  config.h.scons  config_win32.h  config_win32.h.in  configure.ac  configure.in  index.html  libmusicbrainz.pc.in  libmusicbrainz3.pc.in  libmusicbrainz4.pc.cmake  libmusicbrainz5.pc.cmake  libmusicbrainz5cc.pc.cmake  mb_client.doxy  mb_client.spec  valgrind.supp
4.0.0/: _alias_8h.html  _alias_8h_source.html  _alias_list_8h.html  _alias_list_8h_source.html  _annotation_8h.html  _annotation_8h_source.html  _annotation_list_8h.html  _annotation_list_8h_source.html  _artist_8h.html  _artist_8h_source.html  _artist_credit_8h.html  _artist_credit_8h_source.html  _artist_list_8h.html  _artist_list_8h_source.html  _attribute_8h.html  _attribute_8h_source.html  _attribute_list_8h.html  _attribute_list_8h_source.html  _c_d_stub_8h.html  _c_d_stub_8h_source.html  _c_d_stub_list_8h.html  _c_d_stub_list_8h_source.html  _collection_8h.html  _collection_8h_source.html  _collection_list_8h.html  _collection_list_8h_source.html  _disc_8h.html  _disc_8h_source.html  _disc_list_8h.html  _disc_list_8h_source.html  _entity_8h.html  _entity_8h_source.html  _free_d_b_disc_8h.html  _free_d_b_disc_8h_source.html  _free_d_b_disc_list_8h.html  _free_d_b_disc_list_8h_source.html  _h_t_t_p_fetch_8h.html  _h_t_t_p_fetch_8h_source.html  _i_s_r_c_8h.html  _i_s_r_c_8h_source.html  (+236 more)
4.0.1/: _alias_8h.html  _alias_8h_source.html  _alias_list_8h.html  _alias_list_8h_source.html  _annotation_8h.html  _annotation_8h_source.html  _annotation_list_8h.html  _annotation_list_8h_source.html  _artist_8h.html  _artist_8h_source.html  _artist_credit_8h.html  _artist_credit_8h_source.html  _artist_list_8h.html  _artist_list_8h_source.html  _attribute_8h.html  _attribute_8h_source.html  _attribute_list_8h.html  _attribute_list_8h_source.html  _c_d_stub_8h.html  _c_d_stub_8h_source.html  _c_d_stub_list_8h.html  _c_d_stub_list_8h_source.html  _collection_8h.html  _collection_8h_source.html  (+259 more)
examples/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  SConscript  c_example.c  cdlookup.c  cdlookup.cc  cdlookup.cpp  cdlookup_c.c  cmd.cpp  collections.cc  cpp_example.cpp  ctest.c  discid_test.c  findalbum.c  findartist.c  findartist.cpp  findtrack.c  findtrack.cpp  getalbum.c  getartist.c  getartist.cpp  getartist_c.c  getreleasegroup.cpp  getrels.c  gettrack.c  gettrm.c  getuser.cpp  lyric_example.cpp  mbtest.cc  mbtest.cpp  mp3info.c  search.cc  search_c.c  submittrm.c  tagger.c
examples/win32/: examples.dsp
expat/xmltok/: Makefile.am  Makefile.in
include/musicbrainz3/: Makefile.am  SConscript  artist.h  artistalias.h  config.h  defines.h  disc.h  entity.h  factory.h  filters.h  includes.h  iwebservice.h  label.h  labelalias.h  lists.h  mb_c.h  mbxmlparser.h  metadata.h  model.h  musicbrainz.h  query.h  relation.h  release.h  releaseevent.h  releasegroup.h  results.h  tag.h  track.h  user.h  utils.h  webservice.h
lib/: Makefile.am  Makefile.in  SConscript  apsmetadata.h  apsutility.h  artist.cpp  artistalias.cpp  audiosig.h  base64.c  base64.h  bitprint.h  bitprintinfo.h  browser.c  c_wrapper.cpp  comhttpsocket.cpp  comhttpsocket.h  comsocket.cpp  comsocket.h  disc.cpp  diskid.cpp  diskid.h  encoder.cpp  entity.cpp  haar.cpp  haar.h  http.cpp  http.h  includes.cpp  mbxmlparser.cpp  md5.c  md5.h  metadata.cpp  mp3.cpp  mp3.h  musicbrainz.cpp  parse.cpp  parse.h  proxyhandler.cpp  proxyhandler.h  rdfextract.cpp  (+35 more)
lib/http/: Makefile.am  comsocket.h  http.cpp
lib/xmlParser/: Makefile.am  xmlParser.cpp  xmlParser.h
src/: .gitignore  Alias.cc  AliasList.cc  Annotation.cc  AnnotationList.cc  Area.cc  Artist.cc  ArtistCredit.cc  ArtistList.cc  Attribute.cc  AttributeList.cc  CDStub.cc  CDStubList.cc  CMakeLists.txt  Collection.cc  CollectionList.cc  CoverArtArchive.cc  Disc.cc  DiscList.cc  Entity.cc  Event.cc  FreeDBDisc.cc  FreeDBDiscList.cc  GenericList.cc  HTTPFetch.cc  IPI.cc  ISO31661Code.cc  ISO31661CodeList.cc  ISO31662Code.cc  ISO31662CodeList.cc  ISO31663Code.cc  ISO31663CodeList.cc  ISRC.cc  ISRCList.cc  ISWC.cc  ISWCList.cc  Instrument.cc  Label.cc  LabelInfo.cc  LabelInfoList.cc  (+88 more)
src/http/: Makefile.am  comhttpsocket.cpp  errors.h  http.cpp  http.h  wincomsocket.h
src/xmlParser/: Makefile.am  PMMLModel.xml  Readme.txt  XMLNodeAutoexp.txt  doxy.cfg  makefile  makefile.solaris  xmlParser.cpp  xmlParser.d  xmlParser.dsp  xmlParser.html  xmlParser.lib  xmlParserDLL.dsp  xmlParserTestDLL.dsp  xmlParserUnicode.dsp  xmlTest.cpp  xmlTestUnicode.cpp
src/xmlParser/Doc/html/: annotated.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__StringAlloc.html  group__ToXMLStringTool.html  group__XMLParserBase64Tool.html  group__XMLParserGeneral.html  group__atoX.html  group__conversions.html  group__creation.html  group__navigate.html  group__xmlDelete.html  group__xmlModify.html  group__xmlPosition.html  group__xmlUpdate.html  group__xmlWOSD.html  index.html  modules.html  structToXMLStringTool-members.html  structToXMLStringTool.html  structXMLAttribute-members.html  structXMLAttribute.html  structXMLClear-members.html  structXMLClear.html  structXMLNode-members.html  structXMLNode.html  structXMLNodeContents-members.html  structXMLNodeContents.html  structXMLParserBase64Tool-members.html  (+5 more)
test/: CMakeLists.txt  Makefile.am  SConscript  main.cpp  read_file.h  test_mb_c.cpp  test_model.cpp  test_parser_artist.cpp  test_parser_label.cpp  test_parser_release.cpp  test_parser_releasegroup.cpp  test_parser_track.cpp  test_parser_user.cpp  test_utils.cpp  test_ws.cpp  test_ws_filters.cpp  test_ws_includes.cpp
tests/: CMakeLists.txt  ctest.c  mbtest.cc
(+2297 files in other folders)
